[project]
name = "geolab"
version = "0.1.0"
description = ""
authors = [
    {name = "Tuyen Ha Van",email = "tuyenmassey@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "earthengine-api (>=1.4.6,<2.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "rioxarray (>=0.18.2,<0.19.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
